# fastapi-seed

./: .dockerignore  .gitignore  Makefile  README.md  log.py  main.py  pyproject.toml  requirements.txt  supervisord.conf  worker.py
app/: server.py
app/api/: __init__.py
app/api/v1/: __init__.py  user.py
app/api/v2/: __init__.py  user.py
app/controllers/: __init__.py  user.py
app/models/: __init__.py  user.py
app/providers/: __init__.py  internal.py
app/repositories/: user.py
app/schemas/requests/: user.py
app/schemas/responses/: user.py
core/: settings.py
core/controller/: base.py
core/db/: __init__.py  decorators.py  session.py  transactional.py  utils.py
core/db/mixins/: __init__.py  identifier.py  timestamp.py
core/exceptions/: __init__.py  base.py
core/fastapi/middlewares/: sqlalchemy.py
core/logger/: log_engine.py
core/repository/: __init__.py  base.py  enum.py
core/response/: __init__.py  api_response.py
core/utils/: __init__.py  decorators.py  dict.py  http.py  packages.py
docker/: Dockerfile  docker-compose.yml
machine/: server.py
machine/api/: __init__.py
machine/api/v1/: __init__.py  auth.py  user.py
machine/api/v2/: __init__.py  user.py
machine/controllers/: user.py
machine/models/: __init__.py
machine/providers/: internal.py
machine/repositories/: user.py
migrations/: env.py
migrations/versions/: 21f3364b195b_first_migration.py
routes/main/: __init__.py  ping.py
server/: config.py  constants.py  env.py  exceptions.py  types.py
static/: style.css
templates/: index.html
(+2 files in other folders)
