[project]
name = "app"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.9",
    "jinja2>=3.1.5",
    "langchain-openai>=0.3.7",
    "loguru>=0.7.3",
    "openai>=1.65.1",
    "pandas>=2.2.3",
    "pgvector>=0.3.6",
    "prometheus-client>=0.21.1",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
